# mos-ui

./: README.md
backend/: mos-ui.cabal  stack.yaml
backend/app/: Main.hs
backend/app/Main/: Options.hs
backend/example/monerod/: example.conf
backend/frontend/: bower.json  index.html  index.js  package.json
backend/frontend/src/: Main.purs
backend/src/: Server.hs  Types.hs
backend/src/Monerodo/: MoneroD.hs
backend/src/Server/: Assets.hs  Routes.hs  Templates.hs
backend/src/Types/: Env.hs  Links.hs
frontend/: bower.json  build.sh  clean.sh  package.json  provision.sh
frontend/src/: Content.purs  Main.purs  Tabular.purs  Tasks.purs  Template.js  Template.purs
frontend/src/Content/: .#Node.purs  Explorer.purs  Mining.purs  Node.purs  Payment.purs  Pool.purs  Wallet.purs
frontend/src/Data/: Seek.purs
frontend/src/Tasks/: Task.purs
mos-ui/: .gitignore  README.md  bower.json  build.sh  frontend.js  index.html  index.js  package-lock.json  package.json  provision.sh
mos-ui/output/Arguments/: externs.json  index.js
mos-ui/output/Client/: externs.json  index.js
mos-ui/output/Client.Constants/: externs.json  index.js
mos-ui/output/Control.Alt/: externs.json
mos-ui/output/Control.Alternative/: externs.json
mos-ui/output/Control.Applicative/: externs.json
mos-ui/output/Control.Apply/: externs.json
mos-ui/output/Control.Biapplicative/: externs.json
mos-ui/output/Control.Biapply/: externs.json
mos-ui/output/Control.Bind/: externs.json
mos-ui/output/Control.Category/: externs.json
mos-ui/output/Control.Comonad/: externs.json
mos-ui/output/Control.Comonad.Cofree/: externs.json
mos-ui/output/Control.Comonad.Env/: externs.json
mos-ui/output/Control.Comonad.Env.Class/: externs.json
mos-ui/output/Control.Comonad.Env.Trans/: externs.json
mos-ui/output/Control.Comonad.Store/: externs.json
mos-ui/output/Control.Comonad.Store.Class/: externs.json
mos-ui/output/Control.Comonad.Store.Trans/: externs.json
mos-ui/output/Control.Comonad.Traced/: externs.json
mos-ui/output/Control.Comonad.Traced.Class/: externs.json
mos-ui/output/Control.Comonad.Traced.Trans/: externs.json
mos-ui/output/Control.Comonad.Trans.Class/: externs.json
mos-ui/output/Control.Coroutine/: externs.json
mos-ui/output/Control.Extend/: externs.json
mos-ui/output/Control.Lazy/: externs.json
mos-ui/output/Control.Monad/: externs.json
mos-ui/output/Control.Monad.Aff/: externs.json  index.js
mos-ui/output/Control.Monad.Aff.AVar/: externs.json  index.js
mos-ui/output/Control.Monad.Aff.Class/: externs.json
mos-ui/output/Control.Monad.Aff.Compat/: externs.json  index.js
mos-ui/output/Control.Monad.Aff.Console/: externs.json
mos-ui/output/Control.Monad.Aff.Unsafe/: externs.json
mos-ui/output/Control.Monad.Base/: externs.json  index.js
mos-ui/output/Control.Monad.Cont/: externs.json
mos-ui/output/Control.Monad.Cont.Class/: externs.json
mos-ui/output/Control.Monad.Cont.Trans/: externs.json
mos-ui/output/Control.Monad.Eff/: externs.json
mos-ui/output/Control.Monad.Eff.AVar/: externs.json  index.js
mos-ui/output/Control.Monad.Eff.Class/: externs.json
mos-ui/output/Control.Monad.Eff.Console/: externs.json
mos-ui/output/Control.Monad.Eff.Exception/: externs.json
mos-ui/output/Control.Monad.Eff.Exception.Unsafe/: externs.json
mos-ui/output/Control.Monad.Eff.Now/: externs.json
mos-ui/output/Control.Monad.Eff.Ref/: externs.json
mos-ui/output/Control.Monad.Eff.Ref.Unsafe/: externs.json
mos-ui/output/Control.Monad.Eff.Timer/: externs.json
mos-ui/output/Control.Monad.Eff.Uncurried/: externs.json
mos-ui/output/Control.Monad.Eff.Unsafe/: externs.json
mos-ui/output/Control.Monad.Error.Class/: externs.json
mos-ui/output/Control.Monad.Except/: externs.json
mos-ui/output/Control.Monad.Except.Trans/: externs.json
mos-ui/output/Control.Monad.Free/: externs.json
mos-ui/output/Control.Monad.Free.Trans/: externs.json
mos-ui/output/Control.Monad.Gen/: externs.json
mos-ui/output/Control.Monad.Gen.Class/: externs.json
mos-ui/output/Control.Monad.Gen.Common/: externs.json
mos-ui/output/Control.Monad.List.Trans/: externs.json
mos-ui/output/Control.Monad.Maybe.Trans/: externs.json
mos-ui/output/Control.Monad.RWS/: externs.json
mos-ui/output/Control.Monad.RWS.Trans/: externs.json
mos-ui/output/Control.Monad.Reader/: externs.json
mos-ui/output/Control.Monad.Reader.Class/: externs.json
mos-ui/output/Control.Monad.Reader.Trans/: externs.json
mos-ui/output/Control.Monad.Rec.Class/: externs.json
mos-ui/output/Control.Monad.ST/: externs.json
mos-ui/output/Control.Monad.State/: externs.json
mos-ui/output/Control.Monad.State.Class/: externs.json
mos-ui/output/Control.Monad.State.Trans/: externs.json
mos-ui/output/Control.Monad.Trampoline/: externs.json
mos-ui/output/Control.Monad.Trans.Class/: externs.json
mos-ui/output/Control.Monad.Trans.Control/: externs.json  index.js
mos-ui/output/Control.Monad.Writer/: externs.json
mos-ui/output/Control.Monad.Writer.Class/: externs.json
mos-ui/output/Control.Monad.Writer.Trans/: externs.json
mos-ui/output/Control.MonadPlus/: externs.json
mos-ui/output/Control.MonadZero/: externs.json
mos-ui/output/Control.Parallel/: externs.json
mos-ui/output/Control.Parallel.Class/: externs.json
mos-ui/output/Control.Plus/: externs.json
mos-ui/output/Control.Semigroupoid/: externs.json
mos-ui/output/DBus/: externs.json  index.js
mos-ui/output/DBus.Signature/: externs.json  index.js
mos-ui/output/DOM.CSS.Event.Types/: externs.json
mos-ui/output/DOM.Event.ClipboardEvent/: externs.json
mos-ui/output/DOM.Event.CompositionEvent/: externs.json
mos-ui/output/DOM.Event.Event/: externs.json
mos-ui/src/: Arguments.purs  Client.purs  Main.purs  Spec.purs  Types.purs
mosd/: README.md  mosd.cabal  stack.yaml
mosd/app/: Main.hs
mosd/app/Main/: Options.hs
mosd/src/: Daemon.hs  Types.hs
mosd/src/Daemon/: Constants.hs  Methods.hs
mosd/src/Monerodo/: MoneroD.hs
mosd/src/System/SystemD/: Status.hs
mosd/src/Types/: DBus.hs  Env.hs
(+626 files in other folders)
