name:                mos-ui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/athanclark/mos-ui#readme
license:             BSD3
license-file:        LICENSE
author:              Athan Clark
maintainer:          athan.clark@gmail.com
copyright:           BSD-3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                       Types.Env
                       Types.Links
                       Server
                       Server.Assets
                       Server.Routes
                       Server.Templates
                       Monerodo.MoneroD
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , attoparsec-ip
                     , attoparsec-path
                     , attoparsec-uri
                     , attoparsec-iso8601
                     , bytestring
                     , conduit
                     , conduit-extra
                     , data-default
                     , exceptions
                     , file-embed
                     , http-types
                     , ip
                     , lucid
                     , markup >= 4.0.2
                     , mmorph
                     , monad-control-aligned
                     , mtl
                     , nested-routes
                     , resourcet
                     , text
                     , time
                     , path
                     , path-extra
                     , urlpath >= 6.0.4
                     , split
                     , strict
                     , vector
                     , wai-transformers
                     , wai-middleware-content-type
                     , webpage
  default-language:    Haskell2010
  ghc-options:         -Wall

executable mos-ui
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mos-ui
                     , attoparsec
                     , attoparsec-uri
                     , optparse-applicative
                     , strict
                     , text
                     , wai-transformers
                     , warp
  default-language:    Haskell2010
  other-modules:       Main.Options

test-suite mos-ui-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mos-ui
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/athanclark/mos-ui
