name:                mosd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/athanclark/mosd#readme
license:             BSD3
license-file:        LICENSE
author:              Athan Clark
maintainer:          athan.clark@gmail.com
copyright:           BSD-3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mosd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mosd
  default-language:    Haskell2010

test-suite mosd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mosd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/athanclark/mosd
