name:                mosd
version:             0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/athanclark/mosd#readme
license:             BSD3
license-file:        LICENSE
author:              Athan Clark
maintainer:          athan.clark@gmail.com
copyright:           BSD-3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                       Types.DBus
                       Types.Env
                       Daemon
                       Daemon.Constants
                       Daemon.Methods
                       Monerodo.MoneroD
                       System.SystemD.Status
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , alternative-vector
                     , attoparsec
                     , attoparsec-ip
                     , attoparsec-iso8601
                     , attoparsec-path
                     , attoparsec-uri
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , dbus >= 0.10.13
                     , bytestring
                     , exceptions
                     , extractable-singleton
                     , follow-file
                     , hinotify
                     , ip
                     , logging
                     , monad-control
                     , monad-control-aligned
                     , mtl
                     , path
                     , path-extra
                     , resourcet
                     , text
                     , time
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

executable mosd
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Main.Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mosd
                     , attoparsec
                     , attoparsec-path
                     , dbus
                     , hinotify
                     , optparse-applicative
                     , path
                     , text
                     , unix
  default-language:    Haskell2010

test-suite mosd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mosd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/athanclark/mosd
